--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,9 +1,13 @@
-<ion-header color="light" class="ion-no-border">
+<ion-header color="light">
   <ion-toolbar color="light">
-    <ion-title class="ion-text-center">
-      <strong></strong>
-    </ion-title>
+    <div class="container">
+      <ion-thumbnail slot="start">
+        <ion-img [src]=""></ion-img>
+      </ion-thumbnail>
+      <ion-title class="ion-text-center"></ion-title>
+    </div>
+    <strong></strong>
   </ion-toolbar>
 </ion-header>
 
-<ion-content color="light"> </ion-content>
+<ion-content color="secondary"> </ion-content>
