--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -25,7 +25,7 @@
         </div>
         <div class="container">
           <ion-card-subtitle>Status: {{value.status}}</ion-card-subtitle>
-          <ion-card-subtitle>Status: {{value.locale}}</ion-card-subtitle>
+          <ion-card-subtitle>Local: {{value.locale}}</ion-card-subtitle>
         </div>
       </ion-card-header>
 
@@ -49,7 +49,7 @@
         </table>
         <div class="dropdown-divider"></div>
         <div class="container">
-          <ion-item>
+          <ion-toolbar>
             <ion-avatar slot="start">
               <img src="{{value.imgUrl}}" />
             </ion-avatar>
@@ -57,7 +57,7 @@
               <h4>{{value.name}}</h4>
               <p>{{value.city}}</p>
             </ion-label>
-          </ion-item>
+          </ion-toolbar>
 
           <button class="btn btn-style">Ver Perfil</button>
         </div>
