--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -2,9 +2,9 @@
   <ion-toolbar color="light">
     <div class="container">
       <ion-thumbnail slot="start">
-        <ion-img [src]=""></ion-img>
+        <img src="/assets/shavers-logo.png" />
       </ion-thumbnail>
-      <ion-title class="ion-text-center"></ion-title>
+      <ion-title  class="ion-text-center">Produtos</ion-title>
     </div>
     <strong></strong>
   </ion-toolbar>
@@ -62,4 +62,3 @@
     </ion-card>
   </ion-toolbar>
 </ion-content>
-
