--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,10 +1,9 @@
 <ion-header color="light">
   <ion-toolbar color="light">
     <div class="container">
-      <ion-thumbnail slot="start">
-        <img src="/assets/shavers-logo.png" />
-      </ion-thumbnail>
-      <ion-title  class="ion-text-center">Produtos</ion-title>
+      <img src="/assets/shavers-logo.svg" width="20%" style="margin: 2.5%" />
+
+      <ion-title slot="end" class="ion-text-center">Produtos</ion-title>
     </div>
     <strong></strong>
   </ion-toolbar>
@@ -24,7 +23,7 @@
             <strong>{{value.title}}</strong>
           </ion-card-title>
           <button color="light" style="background-color: #fff">
-            <ion-icon src="/assets/Group357.svg" color="dark"></ion-icon>
+            <ion-icon src="/assets/side.svg"></ion-icon>
           </button>
         </div>
         <div class="container">
