--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -16,7 +16,7 @@
       </button>
     </div>
   </ion-toolbar>
-
+ 
   <ion-content color="secondary">
     <ion-toolbar color="secondary">
       <div
@@ -24,9 +24,29 @@
         class="list-style"
       >
         <ion-list color="secondary">
-          <ion-item button *ngFor="let value of menu">
+          <ion-item button [routerLink]="['edit-info']">
             <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
-            <ion-label>{{value.title}}</ion-label>
+            <ion-label>Informações</ion-label>
+          </ion-item>
+          <ion-item button [routerLink]="['pix']">
+            <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+            <ion-label>Chave Pix</ion-label>
+          </ion-item>
+          <ion-item button [routerLink]="['adress']">
+            <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+            <ion-label>Endereço</ion-label>
+          </ion-item>
+          <ion-item button [routerLink]="['portfolio']">
+            <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+            <ion-label>Portfólio</ion-label>
+          </ion-item>
+          <ion-item button [routerLink]="['services']">
+            <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+            <ion-label>Serviços</ion-label>
+          </ion-item>
+          <ion-item button [routerLink]="['terms']">
+            <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+            <ion-label>Politicas e Termos</ion-label>
           </ion-item>
         </ion-list>
       </div>
