--- a/src/app/tab4/tab4.page.scss
+++ b/src/app/tab4/tab4.page.scss
@@ -6,6 +6,14 @@
   align-items: center;
 
   margin-top: 5px;
+
+  .profile{
+    margin: auto;
+    padding: 1%;
+
+    width: 142px;
+    height: 142px;
+  }
 }
 .list-style {
   display: flex;
@@ -18,16 +26,14 @@
       margin-top: 1%;
       border-radius: 2px;
       font-style: normal;
-      font-weight: 300;
+      font-size: 14px;
+      font-weight: 400;
     }
 
     ion-item:hover {
       margin: 1%;
       border-radius: 5px;
       letter-spacing: -1px;
-
-      -webkit-box-shadow: 0px 0px 22px 5px rgba(0, 0, 0, 0.5);
-      box-shadow: 0px 0px 22px 5px rgba(0, 0, 0, 0.5);
     }
     ion-item:active {
       margin: 3%;
