6 files modified, 8 added

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,9 +6,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content color="secondary">
-  <ion-toolbar color="secondary">
-    <div class="container" style="background-color: secondary">
+<ion-content color="secondary" class="container">
+  <ion-toolbar color="secondary" >
+    <div style="background-color: secondary">
       <ion-list color="secondary">
         <ion-item *ngFor="let value of transactions" color="light">
           <ion-label>
