--- a/src/app/new-service/new-service.component.html
+++ b/src/app/new-service/new-service.component.html
@@ -34,9 +34,9 @@
             type="submit"
             class="btn btn-primary btn-shadow btn-style"
             style="background-color: var(--ion-color-primary);"
-            [routerLink] ="['new-service']"
+            [routerLink] ="['']"
           >
-            <a [routerLink] ="['new-service']" class="btn-style" style="color: white">Adicionar Outro Serviço</a>
+            <a  class="btn-style" style="color: white">Adicionar Outro Serviço</a>
           </button>
         </div>
         <ion-text color="medium">Recomendamos adicionar todos os serviços que você possa realizar</ion-text>
